# timber-joint

./: .dockerignore  .gitignore  ARCHITECTURE.md  CLAUDE.md  Dockerfile  FRAMEWORKS_STATUS.md  components.json  docker-compose.yml  electron.vite.config.ts  npm audit.txt  package-lock.json  package.json  tailwind.config.ts  tsconfig.node.json  tsconfig.web.json  vite.web.config.ts
.github/: copilot-instructions.md
.github/workflows/: build-windows.yml  docker-build.yml
engine/: CMakeLists.txt  CMakePresets.json
engine/include/ec5/: MortiseTenon.h  Results.h
engine/include/ipc/: Protocol.h
engine/src/: main.cpp
engine/src/ec5/: MortiseTenon.cpp
engine/src/ipc/: MessageDispatcher.cpp
scripts/: build-engine.ps1  build-engine.sh  copy-engine.js  find-tools.ps1
src/main/: index.ts
src/main/engine/: EngineProcess.ts  enginePath.ts
src/main/ipc/: engine.ipc.ts  index.ts  project.ipc.ts
src/preload/: index.ts
src/renderer/: App.tsx  globals.css  index.html  main.tsx
src/renderer/api/: bridge.electron.ts  bridge.interface.ts  bridge.ts  bridge.web.ts
src/renderer/components/layout/: AppShell.tsx  Sidebar.tsx  TopBar.tsx
src/renderer/components/results/: CalculationReport.tsx  (+3 more)
src/renderer/hooks/: useCalculation.ts
src/renderer/lib/: units.ts
src/renderer/store/: calculationSlice.ts  index.ts  jointSlice.ts  projectSlice.ts  uiSlice.ts  unitsSlice.ts
src/renderer/types/: engine.types.ts  project.types.ts
src/server/: enginePath.ts  index.ts
src/shared/engine/: EngineProcess.ts
src/shared/handlers/: engine.handler.ts  project.handler.ts
(+14 files in other folders)
